--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <!--
     <script type="text/javascript" src="/javascripts/rfid.js"></script>
   -->
-  <link rel="import" href="/partials/review.html" >
 </head>
 <body>
   <div id="container" class="select-disable dim">
@@ -21,6 +20,9 @@
   <!-- contents -->
   <div id="contentsElement"></div>
   <!-- Ractive Templates -->
+
+
+
   <!-- Ractive leftbar Template -->
   <script id="leftbarTemplate" type="text/ractive">
     <div id="left-bar">
@@ -49,10 +51,15 @@
       </div>
     </div>
   </script>
-  <!-- Ractive contents Template -->
+  <!--  Ractive contents Template 
+        Uses Partials, loaded below -->
+
   <script id="contentsTemplate" type="text/ractive">
-    {{>reviewModePartial}}
+      {{>review}}
+      {{>more}}
+      {{>similar}}
   </script>
+
     <div id="vi-leter">
       <p>vi leter</p>
       <div id="avbryt">
@@ -62,6 +69,7 @@
     </div>
     <div id="overlay"></div>
   </div>
+
 <script type="text/javascript">
   /*
    * LEFT-BAR RACTIVE
@@ -111,10 +119,22 @@
       }
     ]
   }
-  var contentsRactive = new Ractive({
-      el: "#contentsElement",
-      template: "#contentsTemplate",
-      data: { reviewMode: true, book: exampleBook }
+
+  var ractive, partials = {}, promises;
+
+  promises = [ 'review','more' ].map( function ( name ) {
+    return $.ajax( 'partials/' + name + '.html' ).then( function ( response ) {
+      partials[ name ] = response;
+    });
+  });
+
+  Promise.all( promises ).then( function () {
+    var contentsRactive = new Ractive({
+      el: '#contentsElement',
+      template: '#contentsTemplate',
+      partials: partials,
+      data: { reviewMode: true, moreFromAuthorMode: false, similarWorkMode: false, book: exampleBook }
+    });
   });
 </script>
 </body>
