--- a/public/index.html
+++ b/public/index.html
@@ -94,10 +94,11 @@
   /*
    * CONTENTS RACTIVE
    */
-  var exampleBook = { 
-    title: "Yalla", 
+  var exampleBook = {
+    bookId: "http://data.deichman.no/resource/tnr_1430248",
+    title: "Rampete Robin",
     authors: "Punk Cody",
-    coverUrl: "http://www.bokkilden.no/SamboWeb/servlet/VisBildeServlet?produktId=8008311",
+    coverUrl: "http://www.bokkilden.no/SamboWeb/servlet/VisBildeServlet?produktId=8973271",
     localReviews: [ 
       {
         reviewText: "Some shit about the book, bla bla bla...",
@@ -106,16 +107,18 @@
     ],
     sameAuthorBooks: [
       {
-        title: "Hvit fjær",
+        bookId: "http://data.deichman.no/resource/tnr_1430248",
+        title: "Rampete Robin",
         authors: "Wim Wam",
-        coverUrl: "http://www.bokkilden.no/SamboWeb/servlet/VisBildeServlet?produktId=7990193"
+        coverUrl: "http://www.bokkilden.no/SamboWeb/servlet/VisBildeServlet?produktId=8973271"
       } 
     ],
     similarWorks: [
       {
-        title: "Tanker som tvinger",
+        bookId: "http://data.deichman.no/resource/tnr_621959",
+        title: "Alle mine kjære",
         authors: "Soma Catu",
-        coverUrl: "http://www.bokkilden.no/SamboWeb/servlet/VisBildeServlet?produktId=8032252"
+        coverUrl: "http://krydder.bib.no/0047/828961.bilde.1327545784.s.jpg"
       }
     ]
   }
@@ -135,7 +138,39 @@
       partials: partials,
       data: { reviewMode: true, moreFromAuthorMode: false, similarWorkMode: false, book: exampleBook }
     });
+
+    // events
+    contentsRactive.on({
+      lookupBook: function(event) {
+        // HERE!
+        console.dir(event.context);
+        var tnr = /tnr_(.*)/.exec(event.context.bookId)[1];
+        console.log(tnr);
+        // show overlay
+        $('button#retry-knapp').hide();
+        $('#overlay').show();
+        $('button#avbryt-knapp').html('Avbryt');
+        $('div#vi-leter p').html("Henter info om \"" + event.context.title + '" <div id="loading"></div>' );
+        $('#vi-leter').show();
+        request = $.ajax({
+          url: '/populate/'+tnr,
+          type: 'GET'});
+
+        request.done(function(msg) {
+          console.log(msg);
+          contentsRactive.set({book: msg});
+          $('#overlay').hide();
+          $('#vi-leter').hide();
+        });
+        request.fail(function(jqXHR, textStatus, errorThrown) {
+          $('div#vi-leter p').html('&#9760; Beklager, dette tok for lang tid!' );
+          $('button#retry-knapp').show();
+          return;
+        });
+      }
+    });
   });
+
 </script>
 </body>
 </html>
