--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
 
-	<title>Svelte app</title>
+	<title>Aktive hyller</title>
 
 	<link rel='stylesheet' href='stylesheets/style.css'>
 	<link rel='stylesheet' href='bundle.css'>
