--- a/src/App.html
+++ b/src/App.html
@@ -80,7 +80,9 @@
           b.authors = json[0].creatorName.value //extractProperties(data.solutions, ["creatorId", "creatorName"]);
           b.title   = json[0].title.value
           b.responsible = json[0].responsible ? json[0].responsible.value : null
-          b.coverUrl = json[0].coverUrl ? json[0].coverUrl.value : json[0].coverUrl ? json[0].coverUrl.value : null
+          b.workAbstract   = json[0].workAbstract.value
+          b.workKrydder   = json[0].workKrydder.value
+          b.coverUrl = json[0].coverUrl ? json[0].coverUrl.value : json[0].altCoverUrl ? json[0].altCoverUrl.value : null
           return fetch(`/localreviews/${encodeURIComponent(uri)}`)
         })
         .then(res => { return res.json() })
